--- a/Ziplines/BascFrontEndProjects/4-PomodoroClock/css/master.css
+++ b/Ziplines/BascFrontEndProjects/4-PomodoroClock/css/master.css
@@ -1,11 +1,76 @@
 body {
+  background-color: #F5F3BB;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 30px;
   text-align: center;
 }
 
-.clock {
-  border: 2px solid #f90;
+h1 {
+  margin: 0;
+  color: #412722;
+  font-family: 'Pacifico', cursive;
+  font-size: 76px;
+}
+
+.alarm-counter {
+  color: #412722;
+  display: inline-block;
+  padding: 10px 30px;
+}
+
+.alarm-counter p {
+  font-size: 23px;
+  margin: 0;
+  padding: 8px 0;
+  text-transform: uppercase;
+}
+
+.minus, .plus {
+  background: #86BA90;
+  border: 2px solid #412722;
   border-radius: 50%;
+  cursor: pointer;
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+}
+
+.value-container {
+  display: inline-block;
+  width: 50px;
+}
+
+.clock {
+  border: 2px solid #DE291C;
+  border-radius: 50%;
+  cursor: pointer;
   display: inline-block;
   width: 300px;
   height: 300px;
+  margin: 30px 0;
+}
+
+.clock p {
+  color: #412722;
+  font-size: 45px;
+  margin: 0;
+  padding-top: 23%;
+  padding-bottom: 10%;
+}
+
+.clock span {
+  color: #412722;
+  font-size: 65px;
+  font-weight: 600;
+}
+
+.reset {
+  background: #86BA90;
+  border: 2px solid #412722;
+  color: #412722;
+  cursor: pointer;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 30px;
+  margin-top: 20px;
+  padding: 10px 30px;
 }
