--- a/Ziplines/BascFrontEndProjects/4-PomodoroClock/css/master.css
+++ b/Ziplines/BascFrontEndProjects/4-PomodoroClock/css/master.css
@@ -7,7 +7,7 @@ body {
 
 h1 {
   margin: 0;
-  color: #412722;
+  color: #DE291C;
   font-family: 'Pacifico', cursive;
   font-size: 76px;
 }
@@ -31,6 +31,7 @@ h1 {
   border-radius: 50%;
   cursor: pointer;
   font-size: 20px;
+  outline: none;
   width: 40px;
   height: 40px;
 }
@@ -45,23 +46,43 @@ h1 {
   border-radius: 50%;
   cursor: pointer;
   display: inline-block;
-  width: 300px;
   height: 300px;
   margin: 30px 0;
+  overflow: hidden;
+  position: relative;
+  width: 300px;
+  z-index: 20;
+}
+
+#play-icon {
+  color: #412722;
+  margin: 0;
+  padding-top: 10%;
+  padding-bottom: 5%;
 }
 
 .clock p {
   color: #412722;
   font-size: 45px;
   margin: 0;
-  padding-top: 23%;
   padding-bottom: 10%;
 }
 
-.clock span {
+.clock .timer-value {
   color: #412722;
   font-size: 65px;
   font-weight: 600;
+}
+
+.clock .clock-filler {
+  background: #DE291C;
+  bottom: 0;
+  content: '';
+  height: 0%;
+  left: 0;
+  position: absolute;
+  right: 0;
+  z-index: -1;
 }
 
 .reset {
@@ -72,5 +93,6 @@ h1 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 30px;
   margin-top: 20px;
+  outline: none;
   padding: 10px 30px;
 }
